# Flux

./: Dockerfile  pyproject.toml
flux/: __main__.py  app.py
